fix overflow in banner list (french)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -445,7 +445,7 @@ footer.bg-dark {
 
         ul {
             text-align: start;
-            padding-left: 30px;
+            padding-left: 15px;
             margin: 0 20px;
 
             li {
